Fixes Microsoft logo in footer in dark mode
See https://github.com/microsoft/debug-adapter-protocol/issues/208

--- a/css/main.scss
+++ b/css/main.scss
@@ -383,10 +383,10 @@ pre[class=highlight] {
 
 	img {
 		width: 100px;
+	}
 
-		@media (min-width: 576px) {
-			float: right;
-		}
+	a#footer-microsoft-link {
+		display: block;
 	}
 
 	ul {
